FIX: technique image overlap

--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -210,9 +210,19 @@
   #paintings #nav-gallery ul li:hover {
     background-color: var(--intense-green);
   }
+  #paintings #paintings__container article figure {
+    width: 100%;
+    aspect-ratio: 1;
+  }
+  @supports not (aspect-ratio: 1) {
+    #paintings #paintings__container article figure {
+      height: calc(100vw - 3rem);
+    }
+  }
+  
   #paintings #paintings__container article figure img {
-    width: 80vw;
-    height: 80vw;
+    width: 100%;
+    height: 100%;
     object-fit: cover;  
   }
   #hippopotame  img { object-position:  20%  50%; }
